# isis-mocker

./: CMakeLists.txt  LICENSE  README.md  base64pp.cpp  get_version.cpp  install_gtest.sh  main.cpp  tests.cpp  version.h.in
.github/workflows/: release.yml
cli/: Makefile  cli.pc  cliConfig.cmake
cli/examples/: .cli  Makefile  output.txt
include/: base64pp.h  base64pp_export.h  cli_commands.hpp  flooder.hpp  fsm.hpp  io.hpp  isis.hpp  mocker.hpp  parser.hpp  tester.hpp  utils.hpp  version.h
